--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,14 @@
 
   <div id="hidden_tmp">
     <div class="row">
-      <div class="col-auto col-sm-2">
+      <div class="col col-sm-2">
         <button class="btn btn-danger" operation="substract" type="button">-</button>
       </div>
-      <div class="col-auto col-sm-8 btn-group-vertical">
+      <div class="col col-sm-8 btn-group-vertical">
           <span class="btn btn-light" placeholder="name"></span>
           <span class="btn btn-primary btn-lg" placeholder="counter">0</span>
       </div>
-      <div class="col-auto col-sm-2">
+      <div class="col col-sm-2">
         <button class="btn btn-success" operation="add" type="button">+</button>
       </div>
     </div>
